--- a/readme.org
+++ b/readme.org
@@ -3,8 +3,9 @@
 Like /Hello, world!/ but with a weather API. A collection of various languages,
 runtimes and frameworks to test my dotfiles setup.
 
-| Project            | Description         | Editor | Dependencies                           |
-|--------------------+---------------------+--------+----------------------------------------|
-| bash-jq-weather    | Bash script with jq | Emacs  | bash, gojq                             |
-| dotnet-weather     | .NET 7 console app  | Emacs  | direnv, asdf, asdf direnv, asfd dotnet |
-| powershell-weather | Powershell script   | Emacs  | powershell                             |
+| Project            | Description         | Editor | Dependencies                             |
+|--------------------+---------------------+--------+------------------------------------------|
+| bash-jq-weather    | Bash script with jq | Emacs  | bash, gojq                               |
+| dotnet-weather     | .NET 7 console app  | Emacs  | direnv, asdf, asdf direnv, asfd dotnet   |
+| org-babel-weather  | Org Mode and Babel  | Emacs  | restclient.el, ob-restclient.el, jq-mode |
+| powershell-weather | Powershell script   | Emacs  | powershell                               |
